projet_gl/src/test/deca/context/valid/2_09/2_09_3_DeclParam.deca
// Description:
//    Programme test pour déclaration des paramètres
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    float param1;
    int fieldOne(int param3, float param1, boolean param2) {
        this.param1 = param1;
    }
}

{
    A a = new A();
    int param1 = 5;
    float param2 = 7.89;
    boolean param3 = false;
    a.fieldOne(param1, param2, param3);
}