projet_gl/src/test/deca/context/invalid/2_09/2_09_2_DeclParam.deca
// Description:
//    Problème de déclaration de paramètre de type void
//
// Resultats:
//    Ligne 13: Error : compatibility for assignment
// 
// Historique:
//    cree le 17/01/2024

class A {
    boolean param1;
    int fieldOne(int param1, boolean param2, boolean param3){
        this.param1 = param1;
    }
}